sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_false_arrivalpos/errors.duarouter
Error: Invalid arrivalPos definition for vehicle '1'
Quitting (on error).
